Fix: use node instead of nodemon in production

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 # No space
 # VITE_API_URL=http://localhost:5000
-VITE_API_URL=https://mern-4-blog.vercel.app
+# VITE_API_URL=https://mern-4-blog.vercel.app
+
+VITE_API_URL=https://mern4-backend-blog.onrender.com
